docs: 视频学习笔记更新

--- a/my_books/fe-optimization.html
+++ b/my_books/fe-optimization.html
@@ -394,6 +394,59 @@
       <div>升级Open SSL， 重新编译Nginx</div>
       <div>验证， Chrome 查看 NetWork， prottocol 列是否变为 “h2”</div>
 
+      <h4>51 优化前端研发流程</h4>
+      <div>技术选型（页面渲染 或 混合开发）， 项目初始化（React，Vue， Angular）, 依赖库引入（私有NPM）， 本地开发， 项目联调（前端项目脚手架等工具）， 效果确认（产品、设计师确认） - 项目上线</div>
+      
+      <h4>52 前后端如何高效协作</h4>
+      <div>协作模式： 前后端制定数据结构， 前端页面制作， 前端交互实现， 后端开发， 前后端联调， 前端上线， 后端上线（前后端上线顺序根据实际业务情况确定）</div>
+
+      <h4>53 自动化测试 - 有哪些主流方案</h4>
+      <div>UI 自动化， appium, robotFrameWork, selenium, airtest等工具</div>
+      <div>接口自动化工具， Java-restassured, Python-requests, Jmeter, HttpRuner等</div>
+      <div>单元测试： Junit5, pytest, unittest。</div>
+
+      <h4>54 自动化上线 有哪些方案</h4>
+      <div>自动化部署上线， 流程： 拉取代码库代码， 自动化工具在线打包、编译， 代码上线至灰度机器， 代码上线部署至线上全机器， CDN后台更新缓存</div>
+
+      <h4>55 提升整个团队代码质量</h4>
+      <div>指定代码规范</div>
+      <div>静态代码扫码, ts-link插件、 IDE插件等实现（上线系统添加流程）</div>
+      <div>CodeReview 高工或小组内</div>
+      <div>阅读框架核心代码 - 参考优秀源码</div>
+
+      <h4>56 上线前对H5质量检测</h4>
+      <div>页面错误， JS 报错， 接口报错， 线上环境检测， 页面白屏</div>
+      <div>页面性能， 页面加载时间检测， 前端HTML，JS， CSS是否压缩， 体积大小检测， JS、CSS个数上限值（例如最多5个）， GZIP 是否开启， 服务器缓存是否设置</div>
+      <div>页面安全， HTTS检测，静态资源链接等是否包含 HTTP://， XSS检测</div>
+
+      <h4>57 上线后对H5错误、性能监控</h4>
+      <div>页面性能：JS 错误监控， API 接口监控， 日志详情， 用户轨迹</div>
+      <div>统计报表： 大盘走势， 地区分布（地域）， 运营商， 浏览器</div>
+      <div>其他： 页面管理， 性能指标， 报警服务</div>
+
+      <h4>58 线上业务如何进行基调监控</h4>
+      <div>竞品分析、多点监控（按城市、运营商等细分监控）、告警服务（业务告警）</div>
+
+      <h4>59 APP 性能错误监控</h4>
+      <div>监控以下数据， 以下数据保证上报， 后续可在 BI系统图形查看： </div>
+      <div>网络请求</div>
+      <div>启动监控</div>
+      <div>奔溃监控</div>
+      <div>页面监控</div>
+      <div>网络监控</div>
+      <div>WebView监控</div>
+      <div>报警服务（相关监控超过阈值时有相关告警信息输出）</div>
+
+      <h4>60 课程总结 和 后续展望</h4>
+      <div>第一章 课程介绍 和 内容综述</div>
+      <div>第二章 静态资源优化， 图片、HTML， CSS， JS 相关优化， 减少回流重绘、DOM编程优化，静态文件相关优化，前端构建工具选型配置等</div>
+      <div>第三章 页面渲染架构设计 和 性能优化， 浏览器渲染过程（最重要）， 前后端分离、单页面应用技术、BigPipe方案等、页面加载策略（重点）</div>
+      <div>第四章 原生APP优化， 如何选择合适的Webview内核（重要）， 如何设置全局Webview,URL如何预加载、滚动条优化、如何对JSSDK优化（重点），混合式开发，react Native, 小程序， Flutter 选型各自优势等（重点）</div>
+      <div>第五章 服务端、网络优化，如何配置CDN缓存（重点）、减少HTTP，减少Cookies, 请求头如何配置缓存， 开启 gzip, https,http2;</div>
+      <div>第六章 研发流程优化， 优化前端研发流程（重点）， 前后端配合、自动化方案、测试后自动化上线，代码质量检测</div>
+      <div>第七章 全链路质量监控体系建设， 上线前H5代码检测， 上线后H5性能和错误监测（重点）， 线上业务基调监控， APP性能和错误监控</div>
+      <div>未来展望： 学习方法分享: 不熟悉内容重复查阅；《Web性能权威指南》《网站性能检测与优化》《高性能网站建设指南》。精通某一门语言： NodeJs。</div>
+
     </div>
   </body>
 </html>
