feat: 前端周刊更新

--- a/regexp.html
+++ b/regexp.html
@@ -10,7 +10,11 @@
     </head>
     
     <body>
-        <h3>正则表达式使用</h3>
+        <h3>正则表达式使用:</h3>
+        <h2>正则相关教程：</h2>
+        <div><a href="https://www.baidufe.com/item/eb10deb92f2c05ca32cf.html" target="_blank">FeHelper 插件 正则教程</a></div>
+        <div><a href="https://www.runoob.com/regexp/regexp-tutorial.html" target="_blank">菜鸟吧 正则教程</a></div>
+
         <script>
           var str = '';
           // 校验邮箱
@@ -81,7 +85,7 @@
           var hasSpecialChar = /[(\ )(\~)(\!)(\@)(\#)(\$)(\%)(\^)(\&)(\*)(\()(\))(\-)(\_)(\+)(\=)(\[)(\])(\{)(\})(\|)(\\)(\;)(\:)(\')(\")(\,)(\.)(\/)(\<)(\>)(\?)(\)]+/.test("a");
           
           //过滤特殊字符
-          // var str1 = str.replace(/[\'\"\\\/\b\f\n\r\t]/g, '');// 去掉转义字符
+          // var str1 = str.replace(/[\'\"\\\/\b\f\n\r\t]/g, '');// 去掉转义字符， 回车等
           // var str2= str.replace(/[\-\_\,\!\|\~\`\(\)\#\$\%\^\&\*\{\}\:\;\"\L\<\>\?]/g, '');// 去掉特殊字符
           // return str2;
 
