feat: 更新 读书笔记

--- a/my_books/nodejs.html
+++ b/my_books/nodejs.html
@@ -30,6 +30,19 @@
       <h1>《深入浅出Node》 学习</h1>
       <a href="https://weread.qq.com/web/reader/d1b32290718ff65fd1befcc" target="_blank">微信读书</a>
 
+      <h2>第一章 Node简介</h2>
+      <ul>
+        <li>JavaScript 发展历史，1995年诞生，10天仓促创作出来。</li>
+        <li>Node 发展历史 2009年5月，运用场景， Node 基于 libuv 实现跨平台；</li>
+        <li>Chrome 和 Node 组成构成区分图：</li>
+        <li>
+          <img src="https://res.weread.qq.com/wrepub/epub_26211935_3" title="Chrome 和 Node 组成构成区分图"/>
+        </li>
+        <li>Node基于libuv实现跨平台的架构示意图:</li>
+        <li>
+          <img src="https://res.weread.qq.com/wrepub/epub_26211935_6" title="Node基于libuv实现跨平台的架构示意图"/>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
