--- a/regexp.html
+++ b/regexp.html
@@ -77,6 +77,7 @@
 
           // 是否为url地址
           var isUrl = /^https?:\/\//.test("http://www.sogou.com");
+          var getUrl = /https?:\/\/(([a-zA-Z0-9_-])+(\.)?)*(:\d+)?(\/((\.)?(\?)?=?&?[a-zA-Z0-9_-](\?)?)*)[^\s]/i.exec('Report--Sexual content--โทรศัพท์เครื่องเก่า (Memories)--https://www.youtube.com/watch?v=amrOd3Ggpb4 how to ')[0];
           console.log("isUrl:", isUrl);
 
           // 是否为youtube地址
