feat: 新增 CSS demo

--- a/challenge_case/index.html
+++ b/challenge_case/index.html
@@ -53,6 +53,18 @@
               <li><a href="canvas_falling.html" target="_blank">参考demo</a></li>
             </ul>
           </li>
+          <li>
+            <p>6.数据管理系统：</p>
+            <ul>
+              <li><a href="./DMS/Luckysheet/demo.html" target="_blank">LuckysheetDemo</a></li>
+            </ul>
+          </li>
+          <li>
+            <p>7.无JS，纯CSS实现拖拽拉伸：</p>
+            <ul>
+              <li><a href="resize_demo.html" target="_blank">张鑫旭 - 版本</a></li>
+            </ul>
+          </li>
 
         </ul>
       </div>
