--- a/regexp.html
+++ b/regexp.html
@@ -104,6 +104,7 @@
             console.log('replaceParamVal:' + nUrl)
             return nUrl
           }
+          // 大写字母A-Z对应的ASCII码值是65-90, 小写字母a-z对应的ASCII码值是97-122
         </script>
 
     </body>
